--- a/omzsh.yml
+++ b/omzsh.yml
@@ -44,3 +44,11 @@
         dest: ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
         depth: 1
         update: false
+
+    - name: Install powerlevel10k theme
+      ansible.builtin.git:
+        repo: https://github.com/romkatv/powerlevel10k.git
+        dest: ~/.oh-my-zsh/custom/themes/powerlevel10k
+        depth: 1
+        update: false
+        
