🐛 Change name of the Cursor binary

--- a/files/config/alacritty.toml
+++ b/files/config/alacritty.toml
@@ -21,7 +21,7 @@ args = ["new", "-A", "-s", "-0"]
 program = "tmux"
 
 [window]
-decorations = "none"
+decorations = "Full"
 startup_mode = "Windowed"
 dimensions = { columns = 155, lines = 78 }
 
