Add kubectl and ctlptl.

--- a/packages-ext-server.yml
+++ b/packages-ext-server.yml
@@ -8,6 +8,8 @@
       - fzf
       - ripgrep
       - just
+      - kubectl
+      - tilt-dev/tap/ctlptl
 
     cargo_packages:
       - package: "watchexec-cli"
